# keycloak_proxy

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.rst  debug_request.sh  docker-compose.yml
src/: lib.rs  main.rs
tests/: tests.rs
volumes/keycloak/: auto.cnf  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
volumes/keycloak/keycloak/: ADMIN_EVENT_ENTITY.frm  ADMIN_EVENT_ENTITY.ibd  ASSOCIATED_POLICY.frm  ASSOCIATED_POLICY.ibd  AUTHENTICATION_EXECUTION.frm  AUTHENTICATION_EXECUTION.ibd  AUTHENTICATION_FLOW.frm  AUTHENTICATION_FLOW.ibd  AUTHENTICATOR_CONFIG.frm  AUTHENTICATOR_CONFIG.ibd  AUTHENTICATOR_CONFIG_ENTRY.frm  AUTHENTICATOR_CONFIG_ENTRY.ibd  BROKER_LINK.frm  BROKER_LINK.ibd  CLIENT.frm  CLIENT.ibd  CLIENT_ATTRIBUTES.frm  CLIENT_ATTRIBUTES.ibd  CLIENT_AUTH_FLOW_BINDINGS.frm  CLIENT_AUTH_FLOW_BINDINGS.ibd  CLIENT_DEFAULT_ROLES.frm  CLIENT_DEFAULT_ROLES.ibd  CLIENT_INITIAL_ACCESS.frm  CLIENT_INITIAL_ACCESS.ibd  CLIENT_NODE_REGISTRATIONS.frm  CLIENT_NODE_REGISTRATIONS.ibd  CLIENT_SCOPE.frm  CLIENT_SCOPE.ibd  CLIENT_SCOPE_ATTRIBUTES.frm  CLIENT_SCOPE_ATTRIBUTES.ibd  CLIENT_SCOPE_CLIENT.frm  CLIENT_SCOPE_CLIENT.ibd  CLIENT_SCOPE_ROLE_MAPPING.frm  CLIENT_SCOPE_ROLE_MAPPING.ibd  CLIENT_SESSION.frm  CLIENT_SESSION.ibd  CLIENT_SESSION_AUTH_STATUS.frm  CLIENT_SESSION_AUTH_STATUS.ibd  CLIENT_SESSION_NOTE.frm  CLIENT_SESSION_NOTE.ibd  (+146 more)
volumes/keycloak/mysql/: columns_priv.MYI  db.MYI  engine_cost.ibd  event.MYI  func.MYI  innodb_index_stats.ibd  (+11 more)
(+102 files in other folders)
