[package]
name = "keycloak_proxy"
version = "0.1.0"
authors = ["jofas <jonas@fc-web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-proxy = { git = "https://github.com/jofas/actix_proxy" }
actix-oidc-token = { git = "https://github.com/jofas/actix_oidc_token" }
actix-web = "^3.3.2"
actix-rt = "^1.1.1"
actix-cors = "*"
futures = "^0.3.13"
serde = { version = "^1.0.123", features = ["derive"] }
serde_json = "^1.0.59"
lazy_static = "*"
